--- a/fe/src/components/Messages/Messages.css
+++ b/fe/src/components/Messages/Messages.css
@@ -53,3 +53,16 @@
 .message.their::after {
 	left: 12px;
 }
+
+@keyframes slide {
+	from {
+		max-height: 0;
+	}
+	to {
+		max-height: 1000px;
+	}
+}
+
+.should-animate .new {
+	animation: slide 3s;
+}
